gcc/testsuite/algol68/compile/error-supper-6.a68
# { dg-options {-fstropping=supper} }  #

begin mode foo_Invalid = int; # { dg-error "Invalid" }  #
      foo_Invalid some_int = 10; # { dg-error "Invalid" }  #
      skip
end
